# prosway_acquisition

./: .gitignore  README.md  pyproject.toml
data/exports/: prosway_growth_50_200_idf_sample.xlsx  prosway_mvp_idf_after_workflow_refactor.xlsx  prosway_mvp_prospection_rh.xlsx  prosway_mvp_prospection_rh_idf.xlsx  prosway_mvp_prospection_rh_idf_refactored.xlsx  prosway_mvp_workflow_smoke.xlsx  prosway_refactor_smoke.xlsx
docs/: db-schema-design.md  mvp-status.md
docs/plans/: 2026-07-19-growth-signals-workflow.md
scripts/legacy/: prosway_mvp_build.py
src/prosway_acquisition/: __init__.py  api.py  cli.py  config.py  domain.py  drive.py  engine.py  export_profiles.py  models.py  pipeline.py  repositories.py  rules.py  scoring.py  workbook.py  workflow_configs.py  workflows.py
src/prosway_acquisition/adapters/: __init__.py  jobs.py  linkedin.py  news.py  recherche_entreprises.py
tests/: test_api_mapping.py  test_engine.py  test_growth_workbook.py  test_jobs_adapter.py  test_linkedin_adapter.py  test_news_adapter.py  test_rules.py  test_scoring.py  test_workbook.py  test_workflow_configs.py
