[project]
name = "prosway-acquisition"
version = "0.1.0"
description = "Pipeline d'acquisition et de qualification de prospects Prosway"
requires-python = ">=3.11"
dependencies = [
  "openpyxl",
  "google-api-python-client",
]

[dependency-groups]
dev = [
  "pytest",
]

[project.scripts]
prosway-acquisition = "prosway_acquisition.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prosway_acquisition"]
